--- a/webapp/app/Resources/Templates/auth/sign.html
+++ b/webapp/app/Resources/Templates/auth/sign.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form id="record" class="form-control mt-5 w-50 mx-auto" action="../controllers/sign.php" method="post">
+<form id="record" class="form-control mt-5 w-50 mx-auto" action="/register" method="post">
     <div class="mx-5 my-3">
         <label for="email" class="form-label">Введите адрес вашей почты</label>
         <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com">
