--- a/webapp/app/Resources/Templates/admin/header.html
+++ b/webapp/app/Resources/Templates/admin/header.html
@@ -1,8 +1,7 @@
 <header>
     <ul>
-        <li><a href="/">Мероприятия</a></li>
-        <li><a href="/parents">Родители</a></li>
-        <li><a href="/children">Дети</a></li>
+        <li><a href="/">Главная</a></li>
+        <li><a href="/admin">Мероприятия</a></li>
         <li><a href="/logout">Выйти</a></li>
     </ul>
 </header>
