--- a/webapp/app/Resources/Templates/manager/header.html
+++ b/webapp/app/Resources/Templates/manager/header.html
@@ -1,7 +1,7 @@
 <header>
     <ul>
         <li><a href="/">Главная</a></li>
-        <li><a href="/admin">Мероприятия</a></li>
+        <li><a href="/manager">Мероприятия</a></li>
         <li><a href="/logout">Выйти</a></li>
     </ul>
 </header>
