--- a/webapp/app/Resources/Templates/admin/home.html
+++ b/webapp/app/Resources/Templates/admin/home.html
@@ -1,35 +1,34 @@
 {% extends base.html %}
 
 {% block content %}
-{% include admin/header.html %}
 <section class="mx-auto w-75 mt-5 bg-light">
-    <h2 class="w-100 text-center py-3">События</h2>
+    <h2 class="w-100 text-center py-3">Пользователи</h2>
     <div class="d-flex justify-content-around">
-        <p class="w-25 text-center"><b>Событие</b></p>
-        <p class="w-25 text-center"><b>Локация</b></p>
-        <p class="w-25 text-center"><b>Цена</b></p>
-        <p class="w-25 text-center"><b>Связаться</b></p>
-        <p class="w-25 text-center"><b>Редактировать</b></p>
+        <p class="w-25 text-center"><b>id</b></p>
+        <p class="w-25 text-center"><b>username</b></p>
+        <p class="w-25 text-center"><b>email</b></p>
+        <p class="w-25 text-center"><b>role</b></p>
+        <p class="w-25 text-center"><b>operation</b></p>
     </div>
 
-    {% foreach($events as $event): %}
+    {% foreach($users as $user): %}
     <div class="d-flex justify-content-around">
-        <p class="w-25 text-center">{{ $event[0] }}</p>
-        <p class="w-25 text-center">{{ $event[1] }}</p>
-        <p class="w-25 text-center">{{ $event[2] }}</p>
-        <p class="w-25 text-center">{{ $event[3] }}</p>
+        <p class="w-25 text-center">{{ $user[0] }}</p>
+        <p class="w-25 text-center">{{ $user[1] }}</p>
+        <p class="w-25 text-center">{{ $user[2] }}</p>
+        <p class="w-25 text-center">{{ $user[3] }}</p>
         <span class="w-25 text-center">
-            <a href="/event/edit?eid={{ $event[4] }}"><img src="/static/assets/edit.svg"></a>
-            <a name="delete" href="/event/delete?eid={{ $event[4] }}"><img src="/static/assets/delete.svg"></a>
+            <a href="/admin/user/edit?uid={{ $user[0] }}"><img src="/static/assets/edit.svg"></a>
+            <a name="delete" href="/admin/user/delete?uid={{ $user[0] }}"><img src="/static/assets/delete.svg"></a>
         </span>
     </div>
     {% endforeach; %}
-    <a class="text-center" href="/event/new"><img src="/static/assets/record.svg"></a>
+    <a class="text-center" href="/admin/user/add"><img src="/static/assets/record.svg"></a>
     <div id="popup" class="w-50 mx-auto modal-banner d-none">
         <h2 class="text-center">Are you sure?</p>
         <div class="d-flex justify-content-around">
             <button id="popup-no" class="btn btn-warning">No</button>
-            <a href="/event/delete?eid={{ $event[4] }}" id="popup-yes" class="btn btn-light">Yes</a>
+            <a href="/admin/user/delete?uid={{ $user[0] }}" id="popup-yes" class="btn btn-light">Yes</a>
         </div>
     </div>
 </section>
@@ -53,4 +52,5 @@
     })
 
 </script>
+
 {% endblock %}
