--- a/webapp/app/Resources/Templates/auth/login.html
+++ b/webapp/app/Resources/Templates/auth/login.html
@@ -11,29 +11,9 @@
         <input type="password" class="form-control" name="password" id="password">
     </div>
     <section class="row">
-        <button class="col-sm btn btn-primary btn-lg my-3 mx-5" disabled type="submit">Отправить</button>
+        <button class="col-sm btn btn-primary btn-lg my-3 mx-5" type="submit">Отправить</button>
         <button class="col-sm btn btn-light btn-lg my-3 mx-5" type="reset">Сбросить</button>
     </section>
 </form>
-
-<script>
-    $(document).ready(() => {
-        const form = $('#record');
-        const submitBtn = form.find('button[type="submit"]');
-        const validate = (data => {
-            let val = true
-            data.forEach(element => {
-                if (element['value'] == '') {
-                    val = false;
-                }
-            });
-            return val;
-        });
-        form.on('change', () => {
-            let data = form.serializeArray();
-            validate(data) ? submitBtn.prop('disabled', false) : submitBtn.prop('disabled', true);
-        });
-    });
-</script>
 
 {% endblock %}
